fixed overflow problemo

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -43,7 +43,21 @@ section {
   display: block;
   margin: 0 auto;
 }
+.container {
+  // clamp(MIN, VAL, MAX)
+  // MIN for a small as you'll allow it to go
+  // VAL for the ideal value
+  // MAX for the upper ceiling you'll allow it to go
 
+  // padding: clamp(2vw, 1.5vw, 0.5vw);
+  overflow: hidden;
+  position: relative;
+  main {
+    height: 2100px;
+    overflow: hidden;
+    position: relative;
+  }
+}
 .title {
   font-size: 3rem;
   font-family: "drucc", serif;
@@ -220,6 +234,7 @@ section.work {
           padding: 15px 36px 10px 36px;
           transition: all 0.3s ease;
           background: white;
+          white-space: nowrap;
           &:hover {
             background: #dfff7c;
           }
@@ -345,6 +360,8 @@ section.info {
   width: 100%;
   z-index: 5;
   padding-top: 3rem;
+  height: auto;
+  overflow: visible;
   .infoBody {
     width: 530px;
     margin-left: auto;
@@ -572,17 +589,6 @@ section.contact {
 }
 .inViewtrueAboutMe {
   animation-delay: 0.75s;
-}
-.container {
-  // clamp(MIN, VAL, MAX)
-  // MIN for a small as you'll allow it to go
-  // VAL for the ideal value
-  // MAX for the upper ceiling you'll allow it to go
-
-  // padding: clamp(2vw, 1.5vw, 0.5vw);
-
-  main {
-  }
 }
 
 @font-face {
